# HMI-IVI-3DCarModel-Kanzi

./: .gitignore  README.md
Application/: CMakeLists.txt
Application/cmake/: kanzi-locate.cmake
Application/src/: ford_3d_car_model.cpp
Tool_project/3D Assets/: 24_12_27_08_46_39_686.fbx  Demo - Stand desk.fbx  WindFlow-New.fbx  model1.fbx  无标题.fbx
Tool_project/Animations/: m_Time
Tool_project/Application Player/: application.cfg  binaries.cfg
Tool_project/MeshData/: AirFlowLeft  AirFlowRight  AirFlowStraight  Cone - baked  Cylinder  SM_Blockers  SM_Brakes_DS  SM_Brakes_PS  SM_CDX707_Engine  SM_Carpaint  SM_Grille_DS  SM_Interior  SM_Lens  SM_Metal  SM_Plastic  SM_Shadow  SM_Widnows  SM_ext_grille_drl  WindFlow  WindFlow_1  _1  polySurface1088  polySurface184  polySurface185  polySurface214  polySurface215  polySurface216  polySurface217  polySurface218  polySurface219  polySurface220  polySurface221  polySurface222  polySurface237  polySurface2683  polySurface2684  polySurface2685  polySurface2686  polySurface2687  polySurface2688  (+132 more)
Tool_project/Scripts/: main.lua
Tool_project/Shaders/: AirFlow.frag.glsl  AirFlow.vert.glsl  AirFlow1.frag.glsl  AirFlow1.vert.glsl  BlitBloom.frag.glsl  BloomThreshold.frag.glsl  ColorTexture.frag_1.glsl  ColorTexture1.frag.glsl  Combine.frag.glsl  CubemapSkybox.frag.glsl  CubemapSkybox.vert.glsl  DefaultBlit.frag.glsl  DefaultBlit.frag_1.glsl  DefaultBlit.frag_2.glsl  DefaultBlit.frag_3.glsl  DefaultBlit.vert_1.glsl  DefaultBlit4.frag.glsl  DefaultBlit_3.frag.glsl  DefaultBlit_3.vert.glsl  DefaultCubemapBlit.frag.glsl  DefaultCubemapBlit.vert.glsl  DefaultCubemapMipmapFilter.frag.glsl  DefaultCubemapMipmapFilter.vert.glsl  DefaultDepthMipmapFilter.frag.glsl  DefaultDepthMipmapFilter.vert.glsl  DefaultMipmapFilter.frag.glsl  DefaultMipmapFilter.vert.glsl  DynamicAC.frag.glsl  DynamicAC.vert.glsl  FragmentPhongTextured1.frag.glsl  FragmentPhongTextured1.vert.glsl  FragmentPhongTexturedCube.frag.glsl  FragmentPhongTexturedCube.vert.glsl  GaussianBloom07.frag.glsl  GaussianBloom13.frag.glsl  GaussianBloom13.vert.glsl  GaussianBloom15.frag.glsl  PhysicallyBased.frag.glsl  PhysicallyBased.vert.glsl  PostProcessTonemap.frag.glsl  (+4 more)
